2007-05-16  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-04
	* pick up latest converter updates [still in progress]
	* add src/confdb/gui/ConverterService.java
	* if 'input' is set in the Converter section of the
	ConfigurationPanel, a PoolSource with 'fileNames' parameter set
	according to input replaces any EDSource given in the
	configuration; the PoolSource should be inserted if no EDSource
	was present in the first place, but that isn't the case yet.
	* There are now four tabs on the left side: Tree, Ascii, Python,
	and Html

2007-05-16  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-03
	* collect latest parser update
	* collect latest converter update [still in progress]
	* add [V]PSetParameter.unsetTrackedParameterCount()
	* fix [V]PSetParameter.isDefault()
	* fix InstancePanel.actionPerformed()

2007-05-15  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-02
	* fix bug where the name of a PSet would not be loaded from the DB.

2007-05-15  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-01
	* bugfix for gui
	* pick up Ulf's fix for vpset conversion

2007-05-15  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-00
	* change schema (sql/) to accomodate global psets
	* change data model (src/confdb/data) to accomodate global psets
	* change db access (src/confdb/db/CfgDatabase.java) to accomodate
	global psets
	* change gui (src/confdb/gui/) to accomodate global psets
	* pick up Jonathan's latest changes to the parser

2007-05-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-00-12
	* various fixes, but no schema change regarding global PSets yet!
	* bugfix: PSet children were not properly loaded in 'Open'
	* change 'New Configuration' dialog such that dialog doesn't bail
	out if name and/or release are not set
	* Improve 'AddModule' context menu: all ModuleType submenus have